welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:6: error: not found: value dessineV
	dessineV()
        ^PictureMono:10: error: not found: value nbPas
	avance();nbPas = nbPas + 1;avance();nbPas = nbPas + 1;gauche();avance();nbPas = nbPas + 1;retourne();avance();nbPas = nbPas + 1;gauche();avance();nbPas = nbPas + 1;avance();nbPas = nbPas + 1;gauche()
                 ^PictureMono:10: error: not found: value nbPas
	avance();nbPas = nbPas + 1;avance();nbPas = nbPas + 1;gauche();avance();nbPas = nbPas + 1;retourne();avance();nbPas = nbPas + 1;gauche();avance();nbPas = nbPas + 1;avance();nbPas = nbPas + 1;gauche()
                                            ^PictureMono:10: error: not found: value nbPas
	avance();nbPas = nbPas + 1;avance();nbPas = nbPas + 1;gauche();avance();nbPas = nbPas + 1;retourne();avance();nbPas = nbPas + 1;gauche();avance();nbPas = nbPas + 1;avance();nbPas = nbPas + 1;gauche()
                                                                                ^PictureMono:10: error: not found: value nbPas
	avance();nbPas = nbPas + 1;avance();nbPas = nbPas + 1;gauche();avance();nbPas = nbPas + 1;retourne();avance();nbPas = nbPas + 1;gauche();avance();nbPas = nbPas + 1;avance();nbPas = nbPas + 1;gauche()
                                                                                                                      ^PictureMono:10: error: not found: value nbPas
	avance();nbPas = nbPas + 1;avance();nbPas = nbPas + 1;gauche();avance();nbPas = nbPas + 1;retourne();avance();nbPas = nbPas + 1;gauche();avance();nbPas = nbPas + 1;avance();nbPas = nbPas + 1;gauche()
                                                                                                                                                          ^PictureMono:10: error: not found: value nbPas
	avance();nbPas = nbPas + 1;avance();nbPas = nbPas + 1;gauche();avance();nbPas = nbPas + 1;retourne();avance();nbPas = nbPas + 1;gauche();avance();nbPas = nbPas + 1;avance();nbPas = nbPas + 1;gauche()
                                                                                                                                                                                     ^PictureMono:11: error: not found: value nbPas
	if ( nbPas == 1 || nbPas == 3 || nbPas == 5) {
             ^